# AminoSidExtractorAPI

./: README.md  app.py  pyproject.toml
utils/: exceptionAnswers.json  returnAnswers.json
