[tool.poetry]
name = "AminoSidExtractorAPI"
version = "0.1.1"
description = "Provides you ability to up your own API for getting SID for Amino (aminoapps.com)."
authors = ["toxichead"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
"amino.fix" = "^2.3.4"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
